# clapcheeks.tech

./: .env.local.example  .gitignore  AGENTS.md  CLAUDE.md  HANDOFF.md  PROJECT.md  PYPI-SETUP.md  README.md  RESEND-DNS-RECORDS.md  deploy.sh  ecosystem.config.cjs  vercel.json
.claude/: settings.json
agent/: .env.example  README.md  dogfood_photo_scorer.py  install.sh  pyproject.toml  requirements.txt  setup.py
agent/clapcheeks/: __init__.py  auth.py  cli.py  config.py  convex_runner.py  daemon.py  events.py  ig_enrich.py  ig_scraper.py  job_queue.py  launchd.py  match_intel.py  match_profile_engine.py  match_sync.py  persona.py  queue.py  scoring.py  sentry.py  spending.py  supabase_client.py  sync.py
agent/clapcheeks/addons/: __init__.py  mitm_dating.py  mitm_hinge.py
agent/clapcheeks/ai/: __init__.py  date_ask.py  drafter.py  opener.py  persona_loader.py  photo_describer.py  profile_coach.py  reply.py  sanitizer.py  splitter.py
agent/clapcheeks/auth/: __init__.py  token_vault.py
agent/clapcheeks/autonomy/: __init__.py  approval.py  auto_respond.py  auto_swipe.py  confidence.py  config.py  gate.py  preference_model.py  queue.py  recovery.py
agent/clapcheeks/browser/: __init__.py  driver.py  session.py  stealth.py
agent/clapcheeks/calendar/: client.py  slots.py
agent/clapcheeks/commands/: dogfood.py  e2e_outbound.py  playbook.py  profile.py  spend.py
agent/launchd/: tech.clapcheeks.hingepoller.plist
agent/outward/: __init__.py  cli.py  config.py  profile.py  queue.py  sync.py
agent/qa/: check_match_sync.py
agent/scripts/: direct_snapshot.py  finalize_setup.sh  install_extension_via_ui.sh  login_tinder.py  mint_device_token.py  populate_match_photos.py  populate_match_photos_vision.py  run-hinge-poller.sh  snapshot_now.py  watch_extension.sh
agent/tests/: test_ai_gate.py  test_ai_reply_guards.py  test_attributes_extractor.py  test_attributes_idempotency.py  test_ban_detector.py  test_ban_monitor_persist.py  test_bb_typing_read.py  test_bluebubbles_client.py  test_chatdb_verifier.py  test_content_library.py  test_conversation.py  test_daemon_lock.py  test_drafter_pipeline.py  test_drip_respects_gate.py  test_drip_state_machine.py  test_e2e_outbound.py  test_events_dispatch.py  test_handoff_detection.py  test_ig_enrich.py  test_imessage_sender_tapbacks.py  test_job_queue.py  test_nlp.py  test_offline_ingest.py  test_platforms.py  test_playbook_cli.py  test_preference_learner.py  test_presence.py  test_profile.py  test_rate_limiter.py  test_reactivation_campaign.py  test_research_quickwins.py  test_roster_health.py  test_safety.py  test_sanitizer_attribute_conflicts.py  test_scoring.py  test_sender_bb_first.py  test_sender_p3_p4.py  test_sender_respects_gate.py  test_social_graph.py  test_supabase_client.py  (+4 more)
(+1040 files in other folders)
