[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clapcheeks"
version = "0.1.0"
description = "AI-powered dating co-pilot — swipe, converse, and book dates autonomously"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "click>=8.0",
    "requests>=2.28",
    "pyyaml>=6.0",
    "rich>=13.0",
    "keyring>=24.0",
    "openai>=1.0",
]

[project.optional-dependencies]
browser = ["playwright>=1.40"]
google-calendar = ["google-auth-oauthlib>=1.0", "google-api-python-client>=2.0"]
local-ai = ["ollama>=0.1"]
anthropic = ["anthropic>=0.20"]
grindr = ["Grindr>=0.1"]
supabase = ["supabase>=2.0"]
all = [
    "playwright>=1.40",
    "google-auth-oauthlib>=1.0",
    "google-api-python-client>=2.0",
    "ollama>=0.1",
    "anthropic>=0.20",
    "supabase>=2.0",
]

[project.scripts]
clapcheeks = "clapcheeks.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["clapcheeks*"]
