[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clapcheeks"
version = "0.1.0"
description = "AI-powered dating co-pilot — swipe, converse, and book dates autonomously"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "click>=8.0",
    "requests>=2.28",
    "pyyaml>=6.0",
    "rich>=13.0",
    "keyring>=24.0",
    "openai>=1.0",
    # AI-8876: supabase is required by the daemon (not optional)
    "supabase>=2.0",
    # AI-8876: playwright is required by Tinder ingest (not optional)
    "playwright>=1.40",
]

[project.optional-dependencies]
google-calendar = ["google-auth-oauthlib>=1.0", "google-api-python-client>=2.0"]
local-ai = ["ollama>=0.1"]
anthropic = ["anthropic>=0.20"]
grindr = ["Grindr>=0.1"]
all = [
    "google-auth-oauthlib>=1.0",
    "google-api-python-client>=2.0",
    "ollama>=0.1",
    "anthropic>=0.20",
]

[project.scripts]
clapcheeks = "clapcheeks.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["clapcheeks*"]

[tool.pytest.ini_options]
markers = [
    "manual: test requires Mac hardware + RUN_E2E=1 (deselect with -m 'not manual')",
]
